Fix z-index layer for slider buttons.

--- a/resources/common.less
+++ b/resources/common.less
@@ -29,7 +29,7 @@ code, pre, tt {
 			position: absolute;
 			top: 50%;
 			padding: 20px 10px;
-			z-index: 100;
+			z-index: 10;
 			cursor: pointer;
 			img {
 				position: absolute;
